--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.6.2",
     "html-react-parser": "^5.0.6",
+    "openai": "^4.20.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
