--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.6.2",
+    "framer-motion": "^10.16.5",
     "html-react-parser": "^5.0.6",
     "openai": "^4.20.0",
     "react": "^18.2.0",
