--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "html-react-parser": "^5.0.6",
     "openai": "^4.20.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-responsive": "^9.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
