--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.6.2",
     "framer-motion": "^10.16.5",
     "html-react-parser": "^5.0.6",
     "openai": "^4.20.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-responsive": "^9.0.2"
+    "react-redux": "^8.1.3",
+    "react-responsive": "^9.0.2",
+    "redux": "^4.2.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
